// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect should be clearable with prop, dirty and multi select 1`] = `

<div tabindex="0"
     data-uid="25"
     role="combobox"
     class="v-input-group v-input-group--dirty v-input-group--append-icon v-input-group--text-field v-input-group--select v-input-group--multiple primary--text"
>
  <div class="v-input-group__input">
    <div class="v-input-group__selections"
         style="overflow: hidden;"
    >
      <div class="v-input-group__selections__comma">
        1
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="v-input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
      >
        <div class="v-card"
             style="height: auto;"
        >
          <div class="list">
            <div>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                <div class="list__tile__action list__tile__action--select-multi">
                  <div tabindex="0"
                       role="checkbox"
                       aria-checked="true"
                       class="v-input-group v-input-group--dirty checkbox v-input-group--selection-controls v-input-group--active primary--text"
                  >
                    <div class="v-input-group__input">
                      <i aria-hidden="true"
                         class="icon icon--selection-control material-icons fade-transition-leave fade-transition-leave-active"
                      >
                        check_box_outline_blank
                      </i>
                      <i aria-hidden="true"
                         class="icon icon--selection-control material-icons icon--checkbox fade-transition-enter fade-transition-enter-active"
                         style="-webkit-transform-origin: top center 0;"
                      >
                        check_box
                      </i>
                      <div class="v-input-group--selection-controls__ripple">
                      </div>
                    </div>
                    <div class="v-input-group__details">
                    </div>
                  </div>
                </div>
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </div>
            <div>
              <a class="list__tile list__tile--link">
                <div class="list__tile__action list__tile__action--select-multi">
                  <div tabindex="0"
                       role="checkbox"
                       aria-checked="false"
                       class="v-input-group checkbox v-input-group--selection-controls primary--text"
                  >
                    <div class="v-input-group__input">
                      <i aria-hidden="true"
                         class="icon icon--selection-control material-icons"
                      >
                        check_box_outline_blank
                      </i>
                      <div class="v-input-group--selection-controls__ripple">
                      </div>
                    </div>
                    <div class="v-input-group__details">
                    </div>
                  </div>
                </div>
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons v-input-group__append-icon v-input-group__icon-cb v-input-group__icon-clearable"
    >
      clear
    </i>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;

exports[`VSelect should be clearable with prop, dirty and single select 1`] = `

<div tabindex="0"
     data-uid="17"
     role="combobox"
     class="v-input-group v-input-group--dirty v-input-group--append-icon v-input-group--text-field v-input-group--select primary--text"
>
  <div class="v-input-group__input">
    <div class="v-input-group__selections"
         style="overflow: hidden;"
    >
      <div class="v-input-group__selections__comma">
        1
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="v-input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
      >
        <div class="v-card"
             style="height: auto;"
        >
          <div class="list">
            <div>
              <a class="list__tile list__tile--link list__tile--active primary--text">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </div>
            <div>
              <a class="list__tile list__tile--link">
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="icon material-icons v-input-group__append-icon v-input-group__icon-cb v-input-group__icon-clearable"
    >
      clear
    </i>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;
